# ROSFest

./: README.md
VCA/2000MHz/: scan_ros-09-03-173259.csv
install/: local_setup.sh  setup.sh
install/robofest/lib/robofest/: drone_node  mine_detector
install/robofest/share/ament_index/resource_index/package_run_dependencies/: robofest
install/robofest/share/ament_index/resource_index/parent_prefix_path/: robofest
install/robofest/share/robofest/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robofest/share/robofest/cmake/: robofestConfig-version.cmake  robofestConfig.cmake
install/robofest/share/robofest/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/robofest/: CMakeLists.txt
src/robofest/src/: dronenode.cpp  port.cpp
